@@ -3,9 +3,12 @@ package pl.sycamore.filetransformer.spock;
 import org.apache.commons.lang3.StringUtils;
 import org.example.GeneratorConfig;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.example.Functor.get;
 import static pl.sycamore.string.StringNamespace.splitListByText;
@@ -21,6 +24,11 @@ public class TextFileIntoSpockSpecification {
 
         var gwtList = splitListByText(fileLines, "Spec: ").stream()
                 .map(specText -> {
+                    var description = specText.stream()
+                            .filter(it -> it.contains("Spec: "))
+                            .findFirst()
+                            .map(it -> it.replace("Spec: ", ""))
+                            .orElseThrow();
                     var given = get(MiroTextNamespace.extractText(specText, GIVEN, WHEN))
                             .then(TextFileIntoSpockSpecification::generateGivenOrThenDescription)
                             .value();
@@ -37,7 +45,7 @@ public class TextFileIntoSpockSpecification {
                     var thenCodeBlock = get(MiroTextNamespace.extractText(specText, THEN))
                             .then(TextFileIntoSpockSpecification::generateThenCodeBlock)
                             .value();
-                    return new GivenWhenThen(given, givenCodeBlock, when, whenCodeBlock, then, thenCodeBlock);
+                    return new GivenWhenThen(description, given, givenCodeBlock, when, whenCodeBlock, then, thenCodeBlock);
                 })
                 .toList();
         return Optional.of(new SpockSpecification(packageName, className, gwtList));
@@ -49,23 +57,33 @@ public class TextFileIntoSpockSpecification {
                 .map(MiroTextNamespace::removeTags)
                 .map(StringUtils::trimToEmpty)
                 .toList();
-        return String.join("and ", description);
+        return String.join(" and ", description);
     }
 
     private static Function<List<String>, List<String>> generateGivenCodeBlock() {
         return givenText -> givenText.stream()
-                .filter(t -> t.contains("event"))
-                .map(t -> StringUtils.trimToEmpty(t.replace("<<event>>", "")))
+                .filter(t -> t.contains("<<event>>"))
+                .map(MiroTextNamespace::removeJson)
+                .map(MiroTextNamespace::removeTags)
                 .map(GroovyGeneratorNamespace::eventOccurredCodeBlock)
                 .toList();
     }
 
     private static List<String> generateThenCodeBlock(List<String> thenText) {
-        return thenText.stream()
-                .filter(t -> t.contains("<<event>>"))
-                .map(MiroTextNamespace::removeJson)
-                .map(MiroTextNamespace::removeTags)
-                .map(SpockCodeBlockNamespace::eventOccurrenceAssertion)
-                .toList();
+        var code = Stream.concat(
+                thenText.stream()
+                        .filter(t -> t.contains("<<event>>"))
+                        .map(MiroTextNamespace::removeJson)
+                        .map(MiroTextNamespace::removeTags)
+                        .map(SpockCodeBlockNamespace::eventOccurrenceAssertion),
+                thenText.stream()
+                        .filter(t -> t.contains("<<comment>>"))
+                        .map(MiroTextNamespace::removeJson)
+                        .map(MiroTextNamespace::removeTags)
+                        .map(SpockCodeBlockNamespace::comment)
+        ).collect(Collectors.toList());
+        code.add("false");
+
+        return code;
     }
 }
